# CATALYST

./: .env.example  README.md  pyproject.toml  requirements.txt  settings.yaml
MISC_LEARNING/: claim_site.py  device_test_json.json  devie_hostnames.csv  test_parse.py
MISC_LEARNING/Python Lessons/: Lesson 1.docx  Lesson 2.docx  Lesson 3.docx  Lesson 4.docx  Lesson 5.docx  Lesson 6.docx  Lesson 7.docx  Lesson 8.docx  Lesson 9.docx
api/testing/: devices.json  info.py  response.json
csv/: device_credentials.csv  pnp_bulk_add.csv  ports_audit.csv
docs/: README.txt  faq_troubleshooting.md  glossary.md  models_matrix.md  naming_conventions.md  prompt_recipes.md  runbook_cmd_runner.md  runbook_compliance.md  runbook_pnp_claim.md  tags_dictionary.md
examples/: 01_get_inventory.py  02_run_cmdrunner_lldp.py  03_claim_pnp.py  04_push_template.py  05_run_compliance.py  auth.py  beginning.py  compliance.py  devices.py  menu.py  readme.txt  runner.py  template.py
python_code/AP_HUNT/: README.txt  ap_hunter.py  inventory.csv
python_code/AP_HUNT_API/: README.txt  ap_hunt_api.py  ap_hunt_min.py  ap_hunter_dnac.py  hosts.txt  switches.txt
python_code/COMMAND_RUNNER/: cc_command_runner.py
python_code/COMMAND_RUNNER_API/: mass_command_runner.py
python_code/CONFIG_DRIFT_COMPLIANCE/: config_drift_process.py  device_ids.txt
python_code/DIFF_TEST/: diff.py  (+3 more)
src/: cmdrunner.py  compliance_api.py  config.py  dnac_client.py  jobs.py  pnp_api.py  templates_api.py
templates/: cleanup_pnp_vlan.j2  day0_switch.j2  dayN_core.j2
tests/: test_inventory_api.py
vars/: global.yaml
(+14 files in other folders)
